--- a/samples/demo-console/package.json
+++ b/samples/demo-console/package.json
@@ -1,6 +1,6 @@
 {
   "name": "demo-console",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,8 +9,9 @@
   },
   "author": "",
   "dependencies": {
-    "consoleaccesslibrary": "file:../../src/consoleaccesslibrary-1.1.0.tgz",
-    "js-client": "file:../../lib/js-client/js-client-1.1.0.tgz",
+    "consoleaccesslibrary": "file:../../src/consoleaccesslibrary-1.2.0.tgz",
+    "date-fns": "^3.6.0",
+    "js-client": "file:../../lib/js-client/js-client-1.2.0.tgz",
     "js-yaml": "^4.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
